Added auth system
