# src/app/app.controller.ts
@@ -1,12 +1,9 @@
 import { Controller, Get } from '@nestjs/common';
-import { AppService } from './app.service';
 
 @Controller()
 export class AppController {
-  constructor(private readonly appService: AppService) {}
-
-  @Get()
+  @Get('health')
   getHello(): string {
-    return this.appService.getHello();
+    return 'Exemple API is up and running!';
   }
 }
